installs reCAPTCHA package, implements reCAPTCHA in server.js, and adds reCAPTCHA to form

--- a/views/index.html
+++ b/views/index.html
@@ -18,6 +18,7 @@
 
   <!-- APPLICATION SCRIPTS -->
   <script src="scripts/app.js"></script>
+  <script src='https://www.google.com/recaptcha/api.js'></script>
 
 </head>
 
@@ -43,6 +44,8 @@
                 <div class="form-group">
                   <label for="super_power">Super Power</label>
                   <input type="text" class="form-control" name="super_power" placeholder="">
+                  <br>
+                  <div class="g-recaptcha" data-sitekey="6LdSjCkTAAAAADQ9_w6RX3ulDGjR7zNsnUQBO2lq"></div>
                 </div>
                 <br>
                 <button type="submit" class="btn btn-success btn-md collapseButton">Create Your Switt!</button>
