makes demo app more user friendly by adding text for where public key should go

--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,7 @@
                   <label for="super_power">Super Power</label>
                   <input type="text" class="form-control" name="super_power" placeholder="">
                   <br>
-                  <div class="g-recaptcha" data-sitekey="6LdSjCkTAAAAADQ9_w6RX3ulDGjR7zNsnUQBO2lq"></div>
+                  <div class="g-recaptcha" data-sitekey="YOUR_PUBLIC_KEY"></div>
                 </div>
                 <br>
                 <button type="submit" class="btn btn-success btn-md collapseButton">Create Your Switt!</button>
